assets/css/style.css
@font-face {
	font-family: "Ionicons";
	src: url("../fonts/ionicons/fonts/ionicons.eot?v=2.0.0");
	src: url("../fonts/ionicons/fonts/ionicons.eot?v=2.0.0#iefix") format("embedded-opentype"), url("../fonts/ionicons/fonts/ionicons.ttf?v=2.0.0") format("truetype"), url("../fonts/ionicons/fonts/ionicons.woff?v=2.0.0") format("woff"), url("../fonts/ionicons/fonts/ionicons.svg?v=2.0.0#Ionicons") format("svg");
	font-weight: normal;
	font-style: normal;
}

@font-face {
	font-family: 'FontAwesome';
	src: url("../fonts/fontawesome/fonts/fontawesome-webfont.eot?v=4.7.0");
	src: url("../fonts/fontawesome/fonts/fontawesome-webfont.eot?#iefix&v=4.7.0") format("embedded-opentype"), url("../fonts/fontawesome/fonts/fontawesome-webfont.woff2?v=4.7.0") format("woff2"), url("../fonts/fontawesome/fonts/fontawesome-webfont.woff?v=4.7.0") format("woff"), url("../fonts/fontawesome/fonts/fontawesome-webfont.ttf?v=4.7.0") format("truetype"), url("../fonts/fontawesome/fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular") format("svg");
	font-weight: normal;
	font-style: normal;
}

.description {
	font-size: 15px !important;
}

.top-header {
	margin-top: 5% !important;
}

@media only screen and (min-device-width: 800px) and (max-device-width: 991px) {
	.top-header {
		margin-top: 15% !important;
	}
}

@media only screen and (min-device-width: 400px) and (max-device-width: 800px) {
	.top-header {
		margin-top: 25% !important;
	}
}

.mouse-wrap,
.scroll-wrap {
	position: absolute;
	bottom: 50px;
	z-index: 3;
	left: 50%;
	-webkit-transform: translateX(-50%);
	-ms-transform: translateX(-50%);
	transform: translateX(-50%);
}

.mouse-wrap.left,
.scroll-wrap.left {
	left: 30px;
	-webkit-transform: translateX(0%);
	-ms-transform: translateX(0%);
	transform: translateX(0%);
}

.mouse {
	width: 30px;
	height: 50px;
	border-radius: 20px;
	border: 2px solid #212529;
	position: absolute;
	top: calc(50% - 30px);
	left: calc(50% - 20px);
}

.mouse:before,
.mouse:after {
	content: "";
	display: block;
	position: absolute;
}


/* Second */

.m-1:before {
	width: 6px;
	height: 6px;
	border-radius: 50%;
	top: 10px;
	left: calc(50% - 3px);
	background: #212529;
	-webkit-animation: m-1-ball 2s cubic-bezier(0.215, 0.61, 0.355, 1) infinite;
	animation: m-1-ball 2s cubic-bezier(0.215, 0.61, 0.355, 1) infinite;
}

@-webkit-keyframes m-1-ball {
	0%,
	65%,
	100% {
		opacity: 0;
	}
	10%,
	40% {
		opacity: 1;
	}
	0% {
		-webkit-transform: translateY(5px) scale(0.7);
		transform: translateY(5px) scale(0.7);
	}
	5% {
		-webkit-transform: scale(0.7);
		transform: scale(0.7);
	}
	15%,
	100% {
		-webkit-transform: scale(1);
		transform: scale(1);
	}
	45%,
	65% {
		-webkit-transform: translateY(24px) scale(0.7);
		transform: translateY(24px) scale(0.7);
	}
}

@keyframes m-1-ball {
	0%,
	65%,
	100% {
		opacity: 0;
	}
	10%,
	40% {
		opacity: 1;
	}
	0% {
		-webkit-transform: translateY(5px) scale(0.7);
		transform: translateY(5px) scale(0.7);
	}
	5% {
		-webkit-transform: scale(0.7);
		transform: scale(0.7);
	}
	15%,
	100% {
		-webkit-transform: scale(1);
		transform: scale(1);
	}
	45%,
	65% {
		-webkit-transform: translateY(24px) scale(0.7);
		transform: translateY(24px) scale(0.7);
	}
}

.scroll-wrap {
	-webkit-transition: .3s all ease-out;
	-o-transition: .3s all ease-out;
	transition: .3s all ease-out;
	bottom: 50px;
	opacity: 1;
	visibility: visible;
}

.scroll-wrap.sleep {
	bottom: 0;
	opacity: 0;
	visibility: hidden;
}

.testimonial_v1 img {
	height: 80px;
}

.testimonial_v1 .heading {
	color: #495057;
	font-size: 18px;
}

.testimonial_v1 .subheading {
	color: rgba(0, 0, 0, 0.4);
}

.testimonial_v1 blockquote {
	font-family: "Crimson Text", Georgia, "Times New Roman", Times, serif;
	line-height: 1.7;
	color: #495057;
}

.testimonial_v1.pb_quote_v1 .mediamedia-body {
	position: relative;
	margin-top: 40px;
}

.testimonial_v1.pb_quote_v1 .quote {
	font-size: 100px;
	font-family: "Crimson Text", Georgia, "Times New Roman", Times, serif;
	color: #adb5bd;
	line-height: 0;
	position: absolute;
	left: 50%;
	top: 0;
	-webkit-transform: translateX(-50%);
	-ms-transform: translateX(-50%);
	transform: translateX(-50%);
}

.testimonial_v1.pb_quote_v2 .media-body {
	position: relative;
}

.testimonial_v1.pb_quote_v2 .quote {
	font-size: 150px;
	font-family: "Crimson Text", Georgia, "Times New Roman", Times, serif;
	color: #dee2e6;
	line-height: 0;
	top: 40px;
	position: absolute;
	left: 0%;
	z-index: -1;
}

.testimonial_v2 .pb_media-header img {
	height: 70px;
}

.testimonial_v2 .pb_media-header .heading {
	font-size: 18px;
}

.testimonial_v2 .pb_media-header .heading,
.testimonial_v2 .pb_media-header .subheading {
	display: block;
	margin-bottom: 0;
}

.testimonial_v2 blockquote {
	font-family: "Crimson Text", Georgia, "Times New Roman", Times, serif;
	font-style: italic;
	font-size: 18px;
	line-height: 1.7;
	color: #495057;
}

.pb_slide_testimonial_sync_v1 .pb_slider_content .slick-slide {
	padding-top: 40px;
	padding-bottom: 40px;
	font-size: 30px;
	line-height: 1;
}

.pb_slide_testimonial_sync_v1 .pb_slider_content .slick-slide blockquote {
	margin-bottom: 40px;
}

.pb_slide_testimonial_sync_v1 .pb_slider_content .slick-slide img {
	height: 170px;
}

.pb_slide_testimonial_sync_v1 .pb_slider_content .slick-slide .heading {
	font-size: 18px;
	margin-bottom: 0;
}

.pb_slide_testimonial_sync_v1 .pb_slider_content .slick-slide .subheading {
	font-size: 16px;
}

.pb_slide_testimonial_sync_v1 .pb_slider_nav {
	width: 250px;
	margin: 0 auto;
}

.pb_slide_testimonial_sync_v1 .pb_slider_nav .author {
	cursor: pointer;
	padding-top: 10px;
	padding-bottom: 10px;
	margin: 0px 10px;
	-webkit-transition: .3s all ease-in;
	-o-transition: .3s all ease-in;
	transition: .3s all ease-in;
}

.pb_slide_testimonial_sync_v1 .pb_slider_nav .author.slick-current {
	-webkit-transform: scale(1.2);
	-ms-transform: scale(1.2);
	transform: scale(1.2);
}

.pb_pricing_v1 {
	margin-bottom: 50px;
}

.pb_pricing_v1 .price {
	font-size: 50px;
	color: #1d82ff;
}
/* ... */

